--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-node":"ts-node",
-    "bmiCalculate":"ts-node bmiCalculator.ts ",
-    "exerciseCalculate": "ts-node exerciseCalculator.ts"
+    "ts-node": "ts-node",
+    "bmiCalculate": "ts-node bmiCalculator.ts ",
+    "exerciseCalculate": "ts-node exerciseCalculator.ts",
+    "start":"ts-node index.ts",
+    "dev":"ts-node-dev index.ts"
   },
   "author": "pasang",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.16",
     "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
