--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "ts-node": "ts-node",
     "bmiCalculate": "ts-node bmiCalculator.ts ",
     "exerciseCalculate": "ts-node exerciseCalculator.ts",
-    "start":"ts-node index.ts",
-    "dev":"ts-node-dev index.ts"
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "author": "pasang",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
